<resources>
    <string name="app_name">Cadastro de Usuario</string>
    <string name="todo">TODO</string>
    <string name="nome_completo">Nome Completo</string>
    <string name="e_mail">E-mail</string>
    <string name="endere_o">Endereço</string>
    <string name="sexo">Sexo</string>
    <string name="cadastrar">CADASTRAR</string>
    <string name="cancelar">CANCELAR</string>
    <string name="senha">Senha</string>
    <string name="title_activity_tela_login">Tela_Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_e_mail">Login (E-mail)</string>
    <string name="senha">Senha</string>
</resources>